force-app/main/default/objects/Linkedin_Post__c/Linkedin_Post__c.object-meta.xml
<CustomObject>
    <label>Linkedin_Post</label>
    <nameField>
        <displayFormat>LP-{0000}</displayFormat>
        <label>Linkedin_Post Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Linkedin Posts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>