force-app/main/default/objects/Linkedin_Post__c/fields/Lifecycle_State__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_State__c</fullName>
    <label>Lifecycle State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>