force-app/main/default/objects/Linkedin_Post__c/fields/Share_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Share_Commentary__c</fullName>
    <label>Share Commentary</label>
    <type>TextArea</type>
</CustomField>