force-app/main/default/objects/Linkedin_Post__c/fields/Share_Media_Category__c.field-meta.xml
<CustomField>
    <fullName>Share_Media_Category__c</fullName>
    <label>Share Media Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Artical</fullName>
            </value>
            <value>
                <fullName>Image</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>