force-app/main/default/objects/Linkedin_Post__c/fields/Visibility__c.field-meta.xml
<CustomField>
    <fullName>Visibility__c</fullName>
    <label>Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Connections</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>